fix code text colour for high contrast themes

--- a/src/vs/workbench/browser/positronNewProjectWizard/components/wizardFormattedText.css
+++ b/src/vs/workbench/browser/positronNewProjectWizard/components/wizardFormattedText.css
@@ -40,7 +40,9 @@
 .wizard-step
 .wizard-formatted-text
 code {
-	color: var(--vscode-textPreformat-foreground);
+	color: var(--vscode-positronModalDialog-preformattedTextForeground);
+	border-radius: 4px;
+	padding: 1px 3px;
 	font-family: var(--monaco-monospace-font);
 	font-size: 11px;
 }
